<?xml version="1.0"?>
<package>
    <name>niryo_one_debug</name>
    <version>2.3.1</version>
    <description>Niryo One debug tools</description>
    <author>Edouard Renard</author>
    <maintainer email="e.rey-coquais@niryo.com">Etienne Rey-Coquais</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>niryo_one_msgs</build_depend>
    <build_depend>dynamixel_sdk</build_depend>
    <build_depend>mcp_can_rpi</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>niryo_one_msgs</run_depend>
    <run_depend>dynamixel_sdk</run_depend>
    <run_depend>mcp_can_rpi</run_depend>

    <export>
    </export>
</package>
