<?xml version="1.0"?>
<package>
    <name>niryo_one_rpi</name>
    <version>2.3.1</version>
    <description>Specific utilities for Niryo One's RPI3 + custom Niryo One shield</description>
    <author>Edouard Renard</author>
    <author>Maxime Catrice</author>
    <maintainer email="e.rey-coquais@niryo.com">Etienne Rey-Coquais</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>niryo_one_msgs</build_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>niryo_one_msgs</run_depend>
    <run_depend>python-flask</run_depend>
    <run_depend>python-pymodbus</run_depend>
    <run_depend>python-serial</run_depend>
    <run_depend>python-rpi.gpio</run_depend>

    <export>
    </export>
</package>
