<?xml version="1.0"?>
<package>
    <name>niryo_one_tools</name>
    <version>2.3.1</version>
    <description>Provides functionalities to control end-effectors and accessories for Niryo One</description>
    <author>Edouard Renard</author>
    <maintainer email="e.rey-coquais@niryo.com">Etienne Rey-Coquais</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>niryo_one_msgs</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>niryo_one_msgs</run_depend>

    <export>
    </export>
</package>
