<?xml version="1.0"?>
<package>
  <name>niryo_one_user_interface</name>
  <version>2.3.1</version>
  <description>Handles high level commands from user (joystik, sequences, blockly), and calls appropriates Niryo One utilities</description>
  <author>Edouard Renard</author>
  <maintainer email="c.ducatez@niryo.com">Corentin Ducatez</maintainer>
  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>niryo_one_msgs</build_depend>
  <build_depend>niryo_one_commander</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>niryo_one_msgs</run_depend>
  <run_depend>niryo_one_commander</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
